Format all files

--- a/DSL/Example/Web/generated-code-example.html
+++ b/DSL/Example/Web/generated-code-example.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DSL Example</title>
-  <link rel="stylesheet" href="dsl-styles.css">
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>DSL Example</title>
+    <link href="dsl-styles.css" rel="stylesheet">
 </head>
 <body>
-  <div class="row">
+<div class="row">
     <button class="button">Button</button>
     <button class="button">Button</button>
     <button class="button">Button</button>
-  </div>
-  <div class="row">
+</div>
+<div class="row">
     <div class="box">
-      <h1>Title</h1>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <button class="button">Button</button>
+        <h1>Title</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <button class="button">Button</button>
     </div>
     <div class="box">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <button class="button">Button</button>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <button class="button">Button</button>
     </div>
-  </div>
-  <div class="row">
+</div>
+<div class="row">
     <div class="box">
-      <h1>Title</h1>
-      <select>
-        <option value="" hidden selected>Select box</option>
-        <option value="">Option 1</option>
-        <option value="">Option 2</option>
-      </select>
-      <input type="text" placeholder="Input">
-      <button class="button">Button</button>
+        <h1>Title</h1>
+        <select>
+            <option hidden selected value="">Select box</option>
+            <option value="">Option 1</option>
+            <option value="">Option 2</option>
+        </select>
+        <input placeholder="Input" type="text">
+        <button class="button">Button</button>
     </div>
-  </div>
-  <div class="row">
+</div>
+<div class="row">
     <div class="box">
-      <h1>Title</h1>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <select>
-        <option value="" hidden selected>Select box</option>
-        <option value="">Option 1</option>
-        <option value="">Option 2</option>
-      </select>
-    </div>
-    <div class="box">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h1>Title</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <select>
+            <option hidden selected value="">Select box</option>
+            <option value="">Option 1</option>
+            <option value="">Option 2</option>
+        </select>
     </div>
     <div class="box">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <input type="text" placeholder="Input">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
     <div class="box">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <button class="button">Button</button>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <input placeholder="Input" type="text">
     </div>
-  </div>
+    <div class="box">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <button class="button">Button</button>
+    </div>
+</div>
 </body>
 </html>
